add paperclip for image upload

--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -1,4 +1,7 @@
-<p id="notice"><%= notice %></p>
+<p>
+  <strong>Rating:</strong>
+  <%= image_tag @movie.image.url(:medium) %>
+</p>
 
 <p>
   <strong>Title:</strong>
