--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,9 +9,9 @@
   </head>
 
   <body>
-      <% flash.each do |name, msg| %>
-        <%= content_tag(:div, msg, class: "alert alert-info") %>
-      <% end %>
+      <%= render 'shared/errors' %>
+      <%= render 'layouts/header' %>
+      
     <%= yield %>
   </body>
 </html>
