--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -1,36 +1,30 @@
-<p id="notice"><%= notice %></p>
+<div class="container">
 
-<h1>Movies</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Description</th>
-      <th>Movie length</th>
-      <th>Director</th>
-      <th>Rating</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @movies.each do |movie| %>
-      <tr>
-      <td><%= image_tag movie.image.url(:medium), class: "movie-image-container" %></td>
-        <td><%= movie.title %></td>
-        <td><%= movie.description %></td>
-        <td><%= movie.movie_length %></td>
-        <td><%= movie.director %></td>
-        <td><%= movie.rating %></td>
-        <td><%= link_to 'Show', movie %></td>
-        <td><%= link_to 'Edit', edit_movie_path(movie) %></td>
-        <td><%= link_to 'Destroy', movie, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
+  <div class="jumbotron">
+    <h1>Movie Reviews</h1>
+    <p>rank movies for fun</p>
+    <% if !user_signed_in? %>
+      <p><%= link_to 'Sign Up To Write A review', new_user_registration_path, class: "btn btn-primary btn-lg" %></p>
+    <% else %>
+     <%= link_to 'New Movie', new_movie_path, class: 'btn btn-primary' %>
     <% end %>
-  </tbody>
-</table>
+  </div>
 
-<br>
+  <div class="row">
+  <% @movies.each do |movie| %>
+    <div class="col-md-3">
+      <%= movie.title %>
+      <%= link_to (image_tag movie.image.url(:medium), class: 'image'), movie %>
+    </div>
+  <% end %>
+  </div>
 
-<%= link_to 'New Movie', new_movie_path %>
+   
+</div>
+
+
+  
+
+  
+ 
+
