--- a/app/views/layouts/_jumbotron_home.html.erb
+++ b/app/views/layouts/_jumbotron_home.html.erb
@@ -1,7 +1,9 @@
-      <div class="jumbotron">
-        <h1>Navbar example</h1>
-        <p>This example is a quick exercise to illustrate how the default, static navbar and fixed to top navbar work. It includes the responsive CSS and HTML, so it also adapts to your viewport and device.</p>
-        <p>
-          <a class="btn btn-lg btn-primary" href="../../components/#navbar" role="button">View navbar docs &raquo;</a>
-        </p>
-      </div>
+  <div class="jumbotron">
+    <h1>Movie Reviews</h1>
+    <p>rank movies for fun</p>
+    <% if !user_signed_in? %>
+      <p><%= link_to 'Sign Up To Write A review', new_user_registration_path, class: "btn btn-primary btn-lg" %></p>
+    <% else %>
+     <%= link_to 'New Movie', new_movie_path, class: 'btn btn-primary' %>
+    <% end %>
+  </div>
