--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,6 @@
       <%= render 'shared/errors' %>
       <%= render 'layouts/header' %>
       
-    <%= yield %>
+    <div class="container"><%= yield %></div>
   </body>
 </html>
