--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -45,6 +45,7 @@
             <div class="reviews">
               <div class="star-rating" data-score= <%= review.rating %> ></div>
               <p><%= review.comment %></p>
+              <p>Created by <%= review.user.email %><%= time_ago_in_words(review.created_at) %> ago</p>
             </div>
           <% end %>
         <% end %>
