--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -21,12 +21,14 @@
           <li><%= link_to "Sign In", new_user_session_path, class: "active" %></li>
         <% end %>
       </ul>
+      <!-- SEARCH BAR -->
       <%= form_tag search_movies_path, method: :get, class: "navbar-form navbar-right", role: "search" do %>
         <p>
           <%= text_field_tag :search, params[:search], class: "form-control" %>
           <%= submit_tag "Search", name: nil, class: "btn btn-default" %>
         </p>
       <% end %>
+      <!-- END SEARCH BAR -->
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
